# suruga_seiki_ew51

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_INDEX.md  CLAUDE.md  EXPLORATION_REPORT.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_EXPLORATION.md  pyproject.toml  pytest.ini
docs/: QUICKSTART.md
docs/development/: PROJECT_STATUS.md.backup
examples/: example_client.py
src/suruga_seiki_ew51/: __init__.py
src/suruga_seiki_ew51/alignment/: __init__.py  alignment_controller.py
src/suruga_seiki_ew51/config/: __init__.py  settings.py
src/suruga_seiki_ew51/daemon/: __init__.py  cli.py  daemon.py
src/suruga_seiki_ew51/daemon/app/: __init__.py  dependencies.py  main.py
src/suruga_seiki_ew51/daemon/app/routers/: __init__.py  alignment.py  daemon.py  movement.py  servo.py  status.py
src/suruga_seiki_ew51/daemon/backend/: __init__.py  abstract.py
src/suruga_seiki_ew51/daemon/backend/mock/: __init__.py  mock_backend.py
src/suruga_seiki_ew51/daemon/backend/real/: __init__.py  real_backend.py
src/suruga_seiki_ew51/io/: __init__.py
src/suruga_seiki_ew51/models/: __init__.py  alignment.py  base.py  enums.py  requests.py  responses.py
src/suruga_seiki_ew51/motion/: __init__.py
src/suruga_seiki_ew51/sdk/: __init__.py  client.py
src/suruga_seiki_ew51/utils/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/unit/: test_mock_backend.py  test_models.py
